# Python-compiler

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  main.cpp  Грамматика.txt
examples/: 1.cpp  NodePrintVisitor.cpp  NodePrintVisitor.h  NodeToVectorVisitor.cpp  NodeToVectorVisitor.h  ThrowErrorManager.cpp  ThrowErrorManager.hpp  lexer.cpp  optimizer.cpp  parser.cpp
examples/scripts/: 1.py  lexer.py  test_DefinitionWithParams.py  test_If.py  test_LogicPriority.py  test_MulWithDiv.py  test_Not.py  test_Or.py  test_Plus.py  test_ReturnNothing.py  test_ReturnSomething.py
extra/: Grammar.txt  grammar_to_left_terminals_table.py
extra/grarser/: grammar.py  grarser.py  mytoken.py
include/pycom/: LexemeInterface.hpp  LexerInterface.hpp  ParserInterface.hpp
include/pycom/AST/: AST.hpp  ASTNode.hpp  ASTNodePublic.hpp  NodePrintVisitor.h
include/pycom/codegen/: CodeEmittingNodeVisitor.hpp  CodeGenerator.hpp  GlobalNodeVisitor.hpp
include/pycom/error_manager/: ThrowErrorManager.hpp
include/pycom/example_dependencies/: NodePrintVisitor.h  NodeToVectorVisitor.h
include/pycom/factory/: CodeGenFactory.hpp  LexemeFactory.hpp  LexerFactory.hpp  ParserFactory.hpp  SemanticFactory.hpp
include/pycom/interface/: ASTInterface.hpp  ASTNodeInterface.hpp  CodeGeneratorInterface.hpp  ErrorEmitterInterface.hpp  ErrorManagerInterface.hpp  LexerInterface.hpp  LexerStateInterface.hpp  NodeVisitorInterface.hpp  ParserInterface.hpp  SemanticAnalyzerInterface.hpp  VisitableNodeInterface.hpp
include/pycom/lexeme/: Lexeme.hpp
include/pycom/lexer/: FileData.hpp  Lexeme.hpp  Lexer.hpp  LexerData.hpp  LexerMock.hpp  LexerStates.hpp
include/pycom/lib/: Pycom.hpp
include/pycom/optimizer/: CalculateVisitor.hpp  Optimizer.hpp  ShortenExpressionVisitor.hpp
include/pycom/parser/: Parser.hpp
include/pycom/semanalyzer/: SemanticAnalyzer.hpp  SemanticVisitor.hpp  Symbol.hpp  SymbolTable.hpp  SymbolTableStack.hpp
include/pycom/token/: Token.hpp
include/pycom/utility/: BlockTable.hpp  ErrorManager.hpp  Types.hpp
scripts/: 1.py  2.py  3.py  4.py  5.py  lexer.py  test_ArithmOpPriority.py  test_CallWithParams.py  test_ComparisonEqualPriority.py  test_DefinitionNoParams.py  test_For.py  test_IfElifElse.py  test_IfElse.py  test_ManyPlus.py  test_PlusMinus.py
src/pycom/: AST.cpp  ASTNode.cpp  CalculateVisitor.cpp  CodeEmittingNodeVisitor.cpp  CodeGenerator.cpp  CodeGeneratorFactory.cpp  ErrorManager.cpp  FileData.cpp  GlobalNodeVisitor.cpp  Lexeme.cpp  Lexer.cpp  LexerData.cpp  LexerFactory.cpp  LexerStates.cpp  NodePrintVisitor.cpp  NodeToVectorVisitor.cpp  Optimizer.cpp  Parser.cpp  ParserFactory.cpp  Pycom.cpp  SemanticAnalyzer.cpp  SemanticAnalyzerFactory.cpp  SemanticVisitor.cpp  ShortenExpressionVisitor.cpp  Symbol.cpp  SymbolTable.cpp  SymbolTableStack.cpp  ThrowErrorManager.cpp  Token.cpp  run.cpp  stdlib.cpp
tests/: LexerMock.cpp  LexerMock.hpp  NodeToVectorVisitor.cpp  NodeToVectorVisitor.h  ThrowErrorManager.cpp  ThrowErrorManager.hpp  codegentests.cpp  lexertests.cpp  parsertests.cpp  semantictests.cpp
